--- a/src/app/products-component/products-component.component.html
+++ b/src/app/products-component/products-component.component.html
@@ -23,7 +23,7 @@
 
 
 
-
+</nav>
     <!--
     
 <nav class="navbar navbar-light bg-light">
@@ -34,3 +34,10 @@
     </form>
   </div>
 </nav>-->
+<br>
+<br>
+
+<div style="margin: 50px;">
+ <button href="#" class="btn btn-primary" (click)="number()">get number of product quatity ==0 </button>
+<h1>{{s}}</h1>
+</div>
