--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
             <a class="nav-link active" aria-current="page"   routerLink="/products">Procucts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/offres">Articles</a>
+            <a class="nav-link active" aria-current="page" routerLink="/offres">Offres emplois</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
