--- a/src/app/offres-emplois/offres-emplois.component.html
+++ b/src/app/offres-emplois/offres-emplois.component.html
@@ -1,13 +1,14 @@
 
-<h2>offres d'emplois : </h2>
-<nav class="navbar navbar-light bg-light">
+ <div class="d-flex justify-content-center  bg-light">
+  <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
-      <div class="d-flex" style="margin-bottom: 50px;">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" >
+      <div class="d-flex" style="margin-bottom: 50px">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"   />
         <button class="btn btn-outline-success" type="submit">Search</button>
       </div>
     </div>
-</nav>
+  </nav>
+</div>
     <!--
 <div class="row">
 
@@ -37,7 +38,7 @@
 
 -->
 
-
+<div class="cards">
 <div class="card" *ngFor="let emp of listOffresEmploi ,let i=index">
   <div class="card-header">
     {{emp.reference}}
@@ -53,7 +54,7 @@
     </div>
    </div>
 </div>
-
+</div>
 <br>
 
 
